Fixed message writing overflow problem

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -42,7 +42,7 @@
 #m {
   border: 0;
   padding: 10px;
-  width: 98%;   /* 92 for board */
+  width: 97%;   /* was 98 */ 
   /*resize: vertical;
   overflow: scroll;*/
   margin-right: .5%;
